aligned the form button and fixed a few bugs, found even more tho

--- a/Projects/Project0/style_advanced.scss
+++ b/Projects/Project0/style_advanced.scss
@@ -91,12 +91,11 @@ header {
 
 main {
     font-size: 13px;
-    max-width: 1700px;
-    min-width: 360px;
     form {
         #flex-container {
             display: flex;
             flex-wrap: nowrap;
+            max-width: 1400px;
             // justify-content: flex-end;
         }
 
@@ -106,44 +105,48 @@ main {
         }
 
         #input {
-            display: inline;
+            // display: inline;
             line-height: 46px;
-            width: 100%;
+            width: 70%;
             padding: 0;
             margin-left: 40px;
-        }
-        
-        .advanced-search-bar {
-            max-width: 1200px;
-            width: 100%;
-            // display: inline-block;
-            // float: left;
-            min-width: 170px;
-            min-height: 30px;
-            // height: 20px;
-            padding: 1px 8px;
-            // border: 0;
-            border-radius: 0;
-            background-color: white;
+
+            div {
+                text-align: right;
+                // width: auto;
+                
+            }
+
+            .advanced-search-bar {
+                max-width: 1200px;
+                width: 100%;
+                // display: inline-block;
+                // float: left;
+                // min-width: 170px;
+                min-height: 30px;
+                // height: 20px;
+                padding: 1px 8px;
+                // border: 0;
+                border-radius: 0;
+                background-color: white;
+            }
+            
         }
         
         #search-button {
             background-color: $button-bg;
             color: $button-color;
-            // margin: 0 15% 0 0;
+            margin: 0;
             padding: 10px 17px;
             border: 1px solid $border-color;
             // border-radius: 7px;
             cursor: pointer;
-            text-align: right;
+            // text-align: right;
 
             // experiments
-
-            // display: flex;
-            // justify-content: flex-end;
             // position: relative;
-            // right: 0;
             // float: right;
+            // right: 0;
         }
         
         #search-button:hover {
@@ -153,6 +156,8 @@ main {
     }
 }
 
+// Fix the footer position and figure out the why
+// css is not affecting the other pages
 footer {
     position: absolute;
     left: 0;
